# d4-timer-w11

./: .gitignore  Makefile  README.md  TEST_PLAN.md  pyproject.toml
d4_timer/: __init__.py  __main__.py  api.py  audio.py  config.py  controller.py  scheduler.py  settings.py  startup.py  tray.py
d4_timer/ui/: __init__.py  alert_window.py  main_window.py  settings_window.py
tests/: __init__.py  conftest.py  test_api.py  test_audio.py  test_controller_helpers.py  test_realworld.py  test_scheduler.py  test_settings.py
tests/fixtures/: sample_schedule.json
